Add intersect paramter to the API
